--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.9",
     "firebase": "^9.8.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
