--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.9",
+    "dayjs": "^1.11.3",
     "firebase": "^9.8.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
