:construction: Work in progress.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "baseUrl": ".",
     "paths": {
       "@chia/*": ["src/*"],
-    }
+    },
+    "types": ["vitest/globals"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
