--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:vitest": "vitest"
   },
   "dependencies": {
     "ant-design-vue": "^3.2.9",
@@ -20,10 +21,12 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
+    "jsdom": "^20.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vitest": "^0.17.0",
     "vue-tsc": "^0.34.7"
   }
 }
