--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^9.8.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
