:sparkles: Complete contact form.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable"
+    ],
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
