--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/components": "^8.7.5",
     "@vueuse/core": "^8.7.5",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "ant-design-vue": "^3.2.9",
     "dayjs": "^1.11.3",
     "firebase": "^9.8.3",
