:globe_with_meridians: Connect to Hasura.

--- a/.env.production
+++ b/.env.production
@@ -10,4 +10,8 @@ VITE_FORMSPREE_KEY=
 
 VITE_RE_CAPTCHA_KEY=
 
+VITE_GRAPHQL_API=
+VITE_GRAPHQL_WS=
+VITE_GRAPHQL_SECRET_KEY=
+
 NODE_ENV=production
