--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "test:vitest": "vitest"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@vue/apollo-composable": "^4.0.0-alpha.18",
     "@vueuse/components": "^8.7.5",
     "@vueuse/core": "^8.7.5",
     "@vueuse/motion": "^2.0.0-beta.12",
     "ant-design-vue": "^3.2.9",
     "dayjs": "^1.11.3",
     "firebase": "^9.8.3",
+    "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
     "vuex": "^4.0.2",
