--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test:vitest": "vitest",
+    "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx,vue}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\""
   },
   "dependencies": {
